--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,8 @@
   <title>Ikea Product Page</title>
 </head>
 
-<body id="app">
+<body>
+  <div id="app"></div>
   <script src="bundle.js"></script>
 </body>
 
