--- a/static/index.html
+++ b/static/index.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
-  <div id="app"></div>
-  <script src="bundle.js"></script>
+  <div id="alternating">
+    <script src="bundle.js"></script>
+  </div>
 </body>
 
 </html>
